crates/plotnik-lib/tests/03-analyze/anchors/soft_anchor_in_alternation.txt
Q = [
  (a)
  .
  (b)
]
==== diagnostics ====
error: anchors cannot appear directly in alternations
 --> query.ptk:3:3
  |
3 |   .
  |   ^
  |
help: use `[{(a) . (b)} (c)]` to anchor within a branch
==== symbols ====
Q
